syntax = "proto3";

package messages;

message RequestToWork {
  uint32 timestamp = 1;
  string recipient = 2;
  uint64 nonce = 3;
  optional string access_code = 4;
}

message RequestToWorkResponse {
  bool accepted = 1;
  string message = 2;
}

message EffectProtocolMessage {
  oneof message {
    RequestToWork request_to_work = 13;
    RequestToWorkResponse request_to_work_response = 14;
  }
}